--- a/client/index.html
+++ b/client/index.html
@@ -63,9 +63,14 @@
           <script src="app/champion/championCtrl.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/team/teamCtrl.js"></script>
           <script src="components/champion-select/champion-select.js"></script>
+          <script src="components/champion-stats/champion-stats.js"></script>
           <script src="components/modal/modal.service.js"></script>
+          <script src="components/models/champion.js"></script>
+          <script src="components/models/model.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/team-select/team-select.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
