--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -5,11 +5,13 @@
     <p class="lead">Welcome to Omega Death Ball</p>
   </div>
 </header>
-
+<ui-view></ui-view>
 <footer class="footer">
   <div class="container">
-      <p>Angular Fullstack v2.0.13 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+      <p>Omega Death Ball |
+          <a href="https://twitter.com/zealenth">@zealenth</a> |
+          <a href="https://twitter.com/AntiZeal">@AntiZeal</a> |
+          <a href="https://github.com/zealenth/omegadeathball/issues?state=open">Issues</a>
+      </p>
   </div>
 </footer>
