new team stats view

--- a/client/app/team/team.html
+++ b/client/app/team/team.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="teamViewCtrl">
   Team Compositions
-  <team-select team-id="teamId"></team-select>
+  <team-select team-id="selectedTeamId" "></team-select>
 </div>
