--- a/client/index.html
+++ b/client/index.html
@@ -56,6 +56,7 @@
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/jquery-ui/jquery-ui.js"></script>
       <script src="bower_components/angular-dragdrop/src/angular-dragdrop.js"></script>
+      <script src="bower_components/d3/d3.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
