glorious inline styling

--- a/client/app/team/team.html
+++ b/client/app/team/team.html
@@ -1,4 +1,5 @@
 <div ng-controller="teamViewCtrl">
-  Team Compositions
-  <team-select team-id="selectedTeamId" "></team-select>
+  <team-select style="float:left" team-id="selectedTeamId" "></team-select>
+  <div style="float:left;" ui-view></div>
+  <div style="clear:both;"></div>
 </div>
