--- a/client/index.html
+++ b/client/index.html
@@ -74,6 +74,7 @@
           <script src="components/models/model.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/team-select/team-select.js"></script>
+          <script src="components/team-stats/team-stats.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
