bubbles are fun

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
       <!-- injector:css -->
       <!-- endinjector -->
     <!-- endbuild -->
+
   </head>
   <body ng-app="urfApp">
     <!--[if lt IE 7]>
@@ -77,5 +78,6 @@
           <script src="components/team-stats/team-stats.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
