--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,14 +1,9 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <p class="lead">Welcome to Omega Death Ball</p>
-  </div>
-</header>
 <ui-view></ui-view>
 <footer class="footer">
   <div class="container">
-      <p>Omega Death Ball |
+      <p>Omega Deathball |
           <a href="https://twitter.com/zealenth">@zealenth</a> |
           <a href="https://twitter.com/AntiZeal">@AntiZeal</a> |
           <a href="https://github.com/zealenth/omegadeathball/issues?state=open">Issues</a>
