--- a/client/app/team/team.html
+++ b/client/app/team/team.html
@@ -1,5 +1,10 @@
 <div ng-controller="teamViewCtrl">
-  <team-select style="float:left" team-id="selectedTeamId" "></team-select>
-  <div style="float:left;" ui-view></div>
-  <div style="clear:both;"></div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <div ui-view/>
+        <team-select team-id="selectedTeamId" "/>
+      </div>
+    </div>
+  </div>
 </div>
