--- a/client/app/team/team.html
+++ b/client/app/team/team.html
@@ -1,4 +1,4 @@
-<div ng-controller="teamViewCtrl">
+<div class="ui-container" ng-controller="teamViewCtrl">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
